[gd_scene load_steps=3 format=3 uid="uid://6diinrb1oa0i"]

[ext_resource type="Script" uid="uid://tfh3qrniv20d" path="res://game/audio/audio_manager.gd" id="1_ey2pd"]
[ext_resource type="PackedScene" uid="uid://c7qxhl4abh6mj" path="res://game/audio/audio_player.tscn" id="2_8q42q"]

[node name="audio_manager" type="Node"]
process_mode = 3
script = ExtResource("1_ey2pd")
audio_player_prefab = ExtResource("2_8q42q")

[node name="audio_players" type="Node" parent="."]

[node name="music_players" type="Node" parent="."]

[node name="current_music_player" type="AudioStreamPlayer" parent="music_players"]
bus = &"Music"

[node name="next_music_player" type="AudioStreamPlayer" parent="music_players"]
bus = &"Music"
